// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenCounter matches the snapshot 1`] = `
<div>
  <div
    class="collapse.show token-parent"
  >
    <button
      class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-aim"
      title="Helpful text"
    />
    <span
      class="token-count"
    >
      3
    </span>
  </div>
</div>
`;

exports[`TokenCounter matches the snapshot when not visible 1`] = `
<div>
  <div
    class="collapse token-parent"
  >
    <button
      class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-observe"
      title="Watching!"
    />
    <span
      class="token-count"
    >
      1
    </span>
  </div>
</div>
`;
